feat(auth): add email verification and Java 17 support